--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,6 +25,7 @@
 	}
 	#left {
 		width: 30%;
+		height: 450;
 		float: left;
 		color: white;
    		font-family: Colibri;
@@ -44,7 +46,7 @@
 	#right {
 		color: blue;
 		width: 70%;
-		height: 300px;
+		height: 450px;
    		font-family: Colibri;
 		float: left;
 		background-color: white;
